--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         // ==========================================
         // ⚙️ CONFIGURATION (แก้ไขตรงนี้)
         // ==========================================
-        const LIFF_ID = 'YOUR_LIFF_ID'; // ใส่ LIFF ID ที่ได้จาก LINE Developers
-        const GAS_URL = 'YOUR_GAS_WEB_APP_URL'; // ใส่ URL ของ Google Apps Script (Web App)
+        const LIFF_ID = '2009152707-JaNVAeT8'; // ใส่ LIFF ID ที่ได้จาก LINE Developers
+        const GAS_URL = 'https://script.google.com/macros/s/AKfycbw3Hu9nLv7xmvB4bN3xjHUVbHiEZsWTgMANpWQeHG2iAw4_hgsZolaXlsPJf62BuueB/exec'; // ใส่ URL ของ Google Apps Script (Web App)
         // ==========================================
 
         // 1. Initialize LIFF
@@ -271,4 +271,5 @@
         });
     </script>
 </body>
+
 </html>
