--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         // ⚙️ CONFIG
         // ==========================================
         const LIFF_ID = '2009152707-JaNVAeT8'; 
-        const GAS_URL = 'https://script.google.com/macros/s/AKfycbx... (ใส่ URL ของคุณ) .../exec';
+        const GAS_URL = 'https://script.google.com/macros/s/AKfycbzSg5RpBoQ4xVTZfj5S9a0KvoJegrO279k3nmjXClsRG3KL1HO9ZtWmAmH8Bx1B2bi4/exec';
         const LOGO_FILE_ID = '1F3_t5Tk8WfdHu1domWwrEg6JTShR5dmp'; 
 
         // ==========================================
@@ -387,3 +387,4 @@
     </script>
 </body>
 </html>
+
