--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
         const LIFF_ID = '2009152707-JaNVAeT8'; 
         
         // 2. 🔴 สำคัญมาก: วาง Web App URL อันใหม่ล่าสุดตรงนี้
-        const GAS_URL = 'https://script.google.com/macros/s/AKfycbxxGmRtw1b7aEdGtcs4J3pYMZLTA2GYuFthIrn0prHKe4yKh3J6T3jr7nIzUyY6CFs/exec'; 
+        const GAS_URL = 'https://script.google.com/macros/s/AKfycbyKDekAqq2T7mq0nzvj4wroM5TuOYKFBAnQKJoCq8AAl_92LOtnDkwN2pQXhujFd_V3/exec'; 
         
         // 3. Logo ID
-        const LOGO_FILE_ID = '1F3_t5Tk8WfdHu1domWwrEg6JTShR5dmp'; 
+        const LOGO_FILE_ID = '2009199430-hBVGLTtW'; 
 
         // ==========================================
         // 🏗️ GLOBALS & INIT
@@ -442,3 +442,4 @@
     </script>
 </body>
 </html>
+
